--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <title>Hello, world!</title>
+    <div class="alert alert-primary" role="alert">
+      This is one of many Bootstrap items you can add to your website.
+    </div>
   </body>
 </html>
