--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
     <div class="alert alert-primary" role="alert">
       This is one of many Bootstrap items you can add to your website.
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">1st half</div>
+        <div class="col">2nd half</div>
+      </div>
+    </div>
   </body>
 </html>
