--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!--
-    Setup and import jquery, bootstrap, fonts and other neccesary things for the site
-    -->
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
 
     <!-- Icons from Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
   <body>
-    <title>Hello, world!</title>
-    <div class="alert alert-primary" role="alert">
-      This is one of many Bootstrap items you can add to your website.
-    </div>
     <div class="container">
       <div class="row">
-        <div class="col">1st half</div>
-        <div class="col">2nd half</div>
+        <h1>Name</h1>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h3>Contact Me</h3>
+          <a href="...">My LinkedIn</a>
+        </div>
+        <div class="col">
+          <h3>My Education</h3>
+          <p>This is a paragraph about my education</p>
+        </div>
       </div>
     </div>
   </body>
