--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="row">
         <h1>Name</h1>
       </div>
+      <img src="download.png"></img>
       <div class="row">
         <div class="col">
           <h3>Contact Me</h3>
