Updated body in its entirety

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+    <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,24 +12,46 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <!-- Icons from Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <h1>Name</h1>
-      </div>
-      <img src="download.png"></img>
-      <div class="row">
-        <div class="col">
-          <h3>Contact Me</h3>
-          <a href="...">My LinkedIn</a>
-        </div>
-        <div class="col">
-          <h3>My Education</h3>
-          <p>This is a paragraph about my education</p>
-        </div>
-      </div>
-    </div>
-  </body>
+    <script src="https://kit.fontawesome.com/fd954e0767.js" crossorigin="anonymous"></script>
+
+    <title>Portfolio</title>
+    </head>
+    
+    <body>
+        <div class="container-fluid"> <!-- HEADER -->
+            <div class="row align-items-center justify-content-center text-center">
+                <div class="col pt-3">
+                    <h1>Hailey Martinez</h1>
+                </div>
+                <div class="w-100 pt-3"></div>
+                <div class="col-4">
+                    <i class="fab fa-linkedin"></i>
+                    <p>Placeholder</p>
+                </div>
+                <div class="col-4">
+                    <i class="fab fa-github"></i>
+                    <p>GitHub/HMartinez20</p>
+                </div>
+            </div>
+        </div> <!-- END HEADER -->
+        <div class="container pt-3"> <!-- BODY -->
+            <div class="row">
+                <div class="col">
+                    <h3>Hello!</h3>
+                    <p>Welcome. Click a tab below to see more!</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col 3">
+                    <div class="btn-group-vertical" role="group">
+                        <button type="button" class="btn btn-secondary btn-block"> C </button>
+                        <button type="button" class="btn btn-secondary btn-block">Java</button>
+                    </div>
+                </div>
+                <div class="col">
+                    <p>Info</p>
+                </div>
+            </div>
+        </div> <!-- END BODY -->
+    </body>
 </html>
